[package]
name = "xirr"
version = "0.3.2"
edition = "2024"
authors = ["Chandra Sekar S"]
license = "Apache-2.0"
repository = "https://github.com/cskr/xirr"
description = "XIRR for Rust"
readme = "README.md"
documentation = "https://docs.rs/xirr"
exclude = ["tests/*"]

[dependencies]
chrono = { version = "0.4.41", optional = true }
jiff = { version = "0.2.15", optional = true }

[dev-dependencies]
csv = "1.0.0"

[features]
default = ["jiff"]

[package.metadata.docs.rs]
all-features = true
